--- a/timeline.html
+++ b/timeline.html
@@ -1,61 +1,29 @@
-<!-- timeline.html -->
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Case Timeline</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <header>
-    <h1>Dispute Timeline: The Hauskeep vs. Jobber</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="timeline.html">Timeline</a>
-      <a href="docs.html">Documents</a>
-    </nav>
-  </header>
+<article>
+  <h3>2025-04-30 @ 3:15 PM – Jobber – Initial Collection Notice</h3>
+  <p>Jobber sends first formal notice about the $2,137.21 chargeback, warning of collection action by May 2, 2025.</p>
+  <a href="assets/pdfs/Jobber_Notice_0430.pdf" target="_blank">View PDF</a>
+</article>
 
-  <main>
-    <section class="timeline">
-      <article>
-        <h3>2024-06-30 – Jobber – Collection Notice</h3>
-        <p>Initial attempt to collect $2,137.21 allegedly owed by The Hauskeep.</p>
-      </article>
+<article>
+  <h3>2025-05-01 @ 10:23 AM – Kayla Collins – Initial Formal Dispute</h3>
+  <p>Kayla submits her first formal dispute, citing fraud by a false client and requesting Jobber pause collections and review the evidence.</p>
+  <a href="assets/pdfs/5-1-hauskeep-response-2.pdf" target="_blank">View PDF</a>
+</article>
 
-      <article>
-        <h3>2025-05-01 @ 10:23 AM – Kayla Collins – Formal Dispute</h3>
-        <p>Dispute letter sent to Jobber regarding fraudulent chargeback and improper handling under FDCPA.</p>
-        <a href="assets/pdfs/5-1-hauskeep-response-2.pdf" target="_blank">View PDF</a>
-      </article>
+<article>
+  <h3>2025-05-01 @ 10:23 AM – Jobber – Denial of Dispute</h3>
+  <p>Jobber dismisses FDCPA obligations, framing the matter as a chargeback beyond their control. They refuse to investigate the fraud or restore access.</p>
+  <a href="assets/pdfs/Jobber_Response_0501_1023.pdf" target="_blank">View PDF</a>
+</article>
 
-      <article>
-        <h3>2025-05-01 @ 4:51 PM – Jobber – Dispute Response</h3>
-        <p>Jobber replied, treating the issue as a chargeback matter and dismissing FDCPA obligations.</p>
-        <a href="assets/pdfs/5-1-451pm.pdf" target="_blank">View PDF</a>
-      </article>
+<article>
+  <h3>2025-05-01 @ 4:51 PM – Kayla Collins – Final Rebuttal</h3>
+  <p>Kayla reiterates the fraud claim, demands clarification on debt classification, and formally requests Jobber pause all collection action pending review.</p>
+  <a href="assets/pdfs/5-1-451pm.pdf" target="_blank">View PDF</a>
+</article>
 
-      <article>
-        <h3>2025-05-01 (Evening) – Kayla Collins – Rebuttal</h3>
-        <p>Final rebuttal sent, demanding account withdrawal and acknowledgment of legal dispute.</p>
-        <a href="assets/pdfs/5-1-451pm.pdf" target="_blank">View Rebuttal</a>
-      </article>
-
-      <article>
-        <h3>2025-05-02 (Morning) – Jobber – Threat Notice</h3>
-        <p>Email received stating that the matter was sent to collections due to non-payment.</p>
-      </article>
-
-      <article>
-        <h3>2025-05-07 – Jobber – Referral to Collections</h3>
-        <p>Jobber refers the account to third-party collection agency Altus despite ongoing dispute.</p>
-      </article>
-    </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2025 Kayla Collins. Legal Reference Site.</p>
-  </footer>
-</body>
-</html>
+<article>
+  <h3>2025-05-02 – Jobber – Threats and Referral to Collections</h3>
+  <p>Jobber ignores Kayla’s clarification request, threatens credit damage, and refers the disputed balance to Altus Receivables — despite the active dispute and without debt validation — in violation of FDCPA and Rosenthal Act.</p>
+  <a href="assets/pdfs/Jobber_Threats_0502.pdf" target="_blank">View PDF</a>
+</article>
