--- a/index.html
+++ b/index.html
@@ -1,39 +1,116 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Legal Case Timeline</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <title>Hauskeep Legal Case Timeline</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f6f8;
+            color: #333;
+            margin: 0;
+            padding: 2rem;
+        }
+        h1 {
+            text-align: center;
+            color: #2c3e50;
+        }
+        .timeline {
+            max-width: 900px;
+            margin: auto;
+        }
+        article {
+            background: #fff;
+            margin-bottom: 1.5rem;
+            padding: 1rem 1.5rem;
+            border-left: 5px solid #2980b9;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.05);
+            transition: transform 0.2s ease;
+        }
+        article:hover {
+            transform: scale(1.01);
+        }
+        h3 {
+            margin-top: 0;
+            color: #2980b9;
+        }
+        p {
+            margin: 0.5rem 0 0.75rem;
+        }
+        a {
+            color: #3498db;
+            font-weight: bold;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
-  <header>
-    <h1>Legal Documentation Hub</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="timeline.html">Timeline</a>
-      <a href="docs.html">Documents</a>
-    </nav>
-  </header>
+    <h1>Hauskeep Legal Timeline – Case #06417207</h1>
+    <section class="timeline">
 
-  <main>
-    <section class="intro">
-      <h2>Summary</h2>
-      <p>This website documents the full timeline of dispute efforts involving Jobber, Altus Receivables, and CFPB activity. All uploads are for legal and investigative use only.</p>
+        <article>
+            <h3>2025-04-30 @ 8:15 AM – Jobber – Account Suspension & Credit Threat</h3>
+            <p><a href="./assets/pdfs/Jobber_Threat_0430_0815AM.pdf" target="_blank">View PDF</a></p>
+        </article>
+
+        <article>
+            <h3>2025-04-30 @ 3:15 PM – Jobber – Collection Threat Notice</h3>
+            <p><a href="./assets/pdfs/Jobber_Notice_0430.pdf" target="_blank">View PDF</a></p>
+        </article>
+
+        <article>
+            <h3>2025-05-01 @ 10:23 AM – Jobber – Response to Formal Dispute</h3>
+            <p><a href="./assets/pdfs/Jobber_Response_0501_1023.pdf" target="_blank">View PDF</a></p>
+        </article>
+
+        <article>
+            <h3>2025-05-01 @ 4:51 PM – Kayla Collins – Final Rebuttal</h3>
+            <p><a href="./assets/pdfs/5-1-451pm.pdf" target="_blank">View PDF</a></p>
+        </article>
+
+        <article>
+            <h3>2025-05-01 – Kayla Collins – Initial Formal Dispute</h3>
+            <p><a href="./assets/pdfs/5-1-hauskeep-response-2.pdf" target="_blank">View PDF</a></p>
+        </article>
+
+        <article>
+            <h3>2025-05-02 – Jobber – Threat Escalation (Collections + Ignored Rebuttal)</h3>
+            <p><a href="./assets/pdfs/Jobber_Threats_0502.pdf" target="_blank">View PDF</a></p>
+        </article>
+
+        <article>
+            <h3>2025-05-08 @ 11:20 AM – Altus – Initial Collection Notice</h3>
+            <p><a href="./assets/pdfs/Altus_Initial_0508.pdf" target="_blank">View PDF</a></p>
+        </article>
+
+        <article>
+            <h3>2025-05-14 @ 9:10 AM – Altus – Follow-Up Collection Email</h3>
+            <p><a href="./assets/pdfs/Altus_Followup_0514.pdf" target="_blank">View PDF</a></p>
+        </article>
+
+        <article>
+            <h3>2025-05-22 @ 4:32 PM – Kayla Collins – Formal FDCPA Violation Notice + Demand</h3>
+            <p><a href="./assets/pdfs/Immediate_Legal_Compensation_Demand.pdf" target="_blank">View PDF</a></p>
+        </article>
+
+        <article>
+            <h3>2025-05-24 – Kayla Collins – Final Rebuttal Statement</h3>
+            <p><a href="./assets/pdfs/Final_Rebuttal_Statement.pdf" target="_blank">View PDF</a></p>
+        </article>
+
+        <article>
+            <h3>2025-05-24 – Kayla Collins – Reaffirmed Legal Rebuttal</h3>
+            <p><a href="./assets/pdfs/Final_Rebuttal_Legal_Violations_Persisting.pdf" target="_blank">View PDF</a></p>
+        </article>
+
+        <article>
+            <h3>2025-05-30 – Altus – Final Mailed Collection Notification</h3>
+            <p><a href="./assets/pdfs/Final_Notice_Mailed_Statement.pdf" target="_blank">View PDF</a></p>
+        </article>
+
     </section>
-
-    <section class="links">
-      <h3>Quick Access</h3>
-      <ul>
-        <li><a href="timeline.html">View Interactive Timeline</a></li>
-        <li><a href="docs.html">View Document Archive</a></li>
-      </ul>
-    </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2025 Kayla Collins. For legal reference only.</p>
-  </footer>
 </body>
 </html>
